@@ -1,6 +1,7 @@
 Version 5.1.2.3
 Added set-port-next-location! and changed the default prompt 
  read handler to use it when input and output ar terminals
+racket/gui: removed unsupported MDI styles and method
 
 Version 5.1.2.2
 Changed the location-creation semantics of internal definitions
